# anomalous-dimensions

./: Diagon_flt.m  Diagon_rat.m  Makefile.in  README.md  ad_flt.c.in  ad_rat.c.in  configure  configure.in
